--- a/estilo.css
+++ b/estilo.css
@@ -1,11 +1,17 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-   margin: 0;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   background: white;
-     height: 100vh; 
+    margin: 0;
+    background: white;
+   
+}
+
+/* Tela de login*/
+
+.Login-page{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; 
 }
 
 .Card{
@@ -14,13 +20,13 @@ body{
     background: white;
 
     border-radius: 12px;
-    box-shadow: 0 4px 5px; 
+    box-shadow: 0 4px 5px #a8a8a8; 
     
     justify-content: center;
     align-content: center;
     display: flex;
-     border: 1px solid #005CAA;
-      flex-direction: column;
+    border: 1px solid #005CAA;
+    flex-direction: column;
     
 }
 .campo{
@@ -39,32 +45,32 @@ body{
     padding: 16px 12px;
     height: 20px;
     box-sizing: border-box;
-
-    border-radius: 6px;
+    
+    border-radius: 20px;
     border: 1px solid #005CAA;
 }
 
+
 .botao {
-      display: block;
-      width: 100%;
-      padding: 20px;
-       height: 8px;
+    display: block;
+    width: 100%;
+    padding: 20px;
+    height: 8px;
     box-sizing: border-box;
 
-      background:  #FF7F27;
-      text-align: center;
-      color: white;
-      font-size: 16px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-
-      text-decoration: none;
+    background:  #FF7F27;
+    text-align: center;
+    color: white;
+      
+    border-radius: 30px;
+    cursor: pointer;
+    text-decoration: none;
     }
-
 .botao:hover {
-      background-color: #0056b3;
+    background-color: #0056b3;
     }
+
+
  .logo{
     display: block;
     margin: 0 auto 20px auto;
@@ -72,3 +78,32 @@ body{
     height: auto;
     margin-bottom: 20px
  }
+
+ .google-btn {
+  width: 100%;
+  padding: 12px;
+  border-radius: 25px;
+  border: 1px solid #ddd;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+
+  transition: 0.2s;
+}
+
+.google-btn img {
+  width: 20px;
+  height: 20px;
+}
+
+.google-btn:hover {
+  background: #0056b3;
+}
+
+ 
