--- a/estilo.css
+++ b/estilo.css
@@ -52,7 +52,6 @@ body{
 
 
 .botao {
-<<<<<<< Updated upstream
     width: 100%;
     padding: 14px 0;          
     display: flex;
@@ -63,30 +62,16 @@ body{
     color: #fff;
     font-size: 16px;
     font-weight: 600;
-=======
-    display: flex;
-    width: 100%;
-    padding: 14px 0 ;
-    height: 8px;
-    box-sizing: border-box;
->>>>>>> Stashed changes
 
+    box-sizing: border-box;
     border-radius: 30px;
     cursor: pointer;
     text-decoration: none;
-<<<<<<< Updated upstream
 }
 
-=======
-    
-    }
->>>>>>> Stashed changes
 .botao:hover {
-    background-color:#ece8a7;
+    background-color:#005CAA;
 }
-
-
-
 
  .logo{
     display: block;
