--- a/estilo.css
+++ b/estilo.css
@@ -155,6 +155,7 @@ h2 {
   display: flex;
   gap: 30px;
   
+  
 }
 
 .menu a {
@@ -162,6 +163,11 @@ h2 {
   text-decoration: none;
   font-weight: 500;
   margin-right: 15px;
+  background: #ffffff;
+  border-radius: 10px;
+  border: 1px solid #005CAA; 
+   width: 1vh;
+  padding: 1vh;
 }
 
 .menu input{
