--- a/estilo.css
+++ b/estilo.css
@@ -181,9 +181,6 @@ padding: 0.25vw;
 
 }
 
-
-
-
 .ajuste{
   display: flex;
   gap: 30px;
@@ -202,6 +199,7 @@ padding: 0.25vw;
     display: flex;
     border: 1px solid #005CAA;
     flex-direction: column;
+    text-align: center;
     
 }
 
