--- a/estilo.css
+++ b/estilo.css
@@ -141,7 +141,7 @@ h2 {
   background-color: #0056b3;
 }
 .page {
-
+  width: 100%;
   box-shadow: 0 1px #ddd;
 }
 
@@ -423,86 +423,116 @@ color: #0056b3;
     outline: none;
 }
 
-/*Tela chat*/
-
-* {
-  box-sizing: border-box;
+.kkk{
   font-family: Arial, sans-serif;
-}
-
-.chat-page {
+  background: #f2f2f2;
   display: flex;
   justify-content: center;
-  padding: 20px;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
-.chat {
-  width: 320px;
-  height: 500px;
-  border: 2px solid #2b5fb3;
-  border-radius: 20px;
+
+.chat-container {
+  width: 360px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
-  padding: 10px;
+  overflow: hidden;
 }
 
-.header {
-  padding: 10px;
-  border: 2px solid #2b5fb3;
-  border-radius: 15px;
-  text-align: center;
-  font-weight: bold;
+
+.chat-header {
+  background: #eee;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  gap: 10px;
 }
+
+.profile-pic {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.contact-name {
+  font-weight: bold;
+  font-size: 16px;
+}
+
 
 .messages {
   flex: 1;
-  margin: 10px 0;
+  padding: 12px;
   display: flex;
   flex-direction: column;
-  gap: 8px;
 }
 
-.msg {
+
+.message {
   max-width: 70%;
-  padding: 8px 10px;
-  border-radius: 12px;
+  padding: 10px 14px;
+  border-radius: 20px;
+  margin-bottom: 12px;
   font-size: 14px;
 }
 
-.left {
+.andre {
+  background: #e0e0e0;
   align-self: flex-start;
-  background: #eee;
 }
 
-.right {
-  align-self: flex-end;
-  background: #2b5fb3;
+.user {
+  background: #1e3a8a;
   color: #fff;
+  align-self: flex-end;
+  margin-left: auto;
 }
 
 .status {
   font-size: 12px;
-  align-self: flex-end;
-  color: #555;
+  color: gray;
+  text-align: right;
+  margin-top: -5px;
+  margin-bottom: 10px;
 }
 
-.input {
+
+.input-area {
   display: flex;
-  gap: 6px;
+  align-items: center;
+  border-top: 1px solid #ddd;
+  padding: 6px;
 }
 
-.input input {
+.input-area input {
   flex: 1;
-  padding: 6px 10px;
-  border-radius: 15px;
-  border: 1px solid #ccc;
-}
-
-.input button {
-  padding: 6px 10px;
   border: none;
-  border-radius: 10px;
-  background: #ff7a2f;
-  color: #fff;
+  padding: 10px;
+  font-size: 14px;
+  outline: none;
 }
 
+.input-area .camera {
+  background: none;
+  border: none;
+  font-size: 20px;
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.input-area .send {
+  background: orange;
+  border: none;
+  padding: 0 15px;
+  cursor: pointer;
+  font-size: 18px;
+  color: white;
+  border-radius: 50%;
+}
