--- a/estilo.css
+++ b/estilo.css
@@ -612,17 +612,16 @@ text-decoration: none;
   text-decoration: none;
 }
 
-.all{
-  justify-content: center;
-  max-width: 1494px;
-  margin: 0 auto; 
-  padding: 20px;
-  
-  
-  
-}
+
 
 /* perfil*/
+
+.all{
+ 
+  max-width: 1494px;
+  margin: 0px auto;
+  padding: 20px;
+}
 
  .logoperfil{
   background-color: #FF7F27;
@@ -635,18 +634,84 @@ text-decoration: none;
   border-radius: 18px ;
  }
 
- .fotoperfil{
-  background-color: #c7c7c7;
-  border-radius: 50px;
-  height: 100px;
-  width: 100px;
 
+.perfil-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+  padding: 20px;
+  border-radius: 20px;
+  margin-top: -40px; 
+}
+
+
+.perfil-esquerda {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+.fotoperfil {
+  padding: 20px;
+  width: 90px;
+  height: 90px;
+  background-color: #ccc;
+  border-radius: 50%;
+  border: 4px solid white;
+}
+
+
+.info h2 {
+  margin: 0;
+  color: #000;
+}
+
+.info p {
+  margin: 5px 0 0 0;
+}
+
+
+.perfil-direita {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 10px;
+}
+
+.seguidores {
+  border: 1px solid #858585;
+  background: #ffffff;
+  padding: 8px 15px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.editar {
+  padding: 6px 15px;
+  border-radius: 10px;
+  border: 1px solid #aaa;
+  background: white;
+  cursor: pointer;
+}
+ .editar a:hover{
+color: #0056b3;
+border-color: #0056b3;
+}
+
+.itensperfil{
+  border: 2px solid #aaa;
+  background-color: #ffffff;
+  height: 500px;
+  width: 727px;
+  border-radius: 40px ;
  }
- .seguidor {
-  background-color: #c7c7c7;
-  border-radius: 50px;
-  height: 100px;
-  width: 100px;
-  border: 1px solid #3b82f6 ;
+
+ .ajuste4{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-left: auto;
  }
- 
+
