--- a/estilo.css
+++ b/estilo.css
@@ -15,19 +15,17 @@ body{
 }
 
 .Card{
-    width: 300px;
-    padding: 24px;
-    background: white;
-
-    border-radius: 12px;
-    box-shadow: 0 4px 5px #a8a8a8; 
+  width: 300px;
+  padding: 24px;
+  background: white;
+  border-radius: 12px;
+  box-shadow: 0 4px 5px #a8a8a8; 
     
-    justify-content: center;
-    align-content: center;
-    display: flex;
-    border: 1px solid #005CAA;
-    flex-direction: column;
-    
+  justify-content: center;
+  align-content: center;
+  display: flex;
+  border: 1px solid #005CAA;
+  flex-direction: column;  
 }
 
 .campo{
@@ -44,16 +42,42 @@ body{
 }
 
 .campo input{
-    width: 100%;
-    padding: 16px 12px;
-    height: 20px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 16px 12px;
+  height: 20px;
+  box-sizing: border-box;
     
-    border-radius: 20px;
-    border: 1px solid #005CAA;
+  border-radius: 20px;
+  border: 1px solid #005CAA;
 }
 
-.ri-eye-line{
+.campo.success input{
+   border: 3px solid #4ECA64;
+}
+
+.campo.error input {
+    border: 3px solid #DB5A5A;
+}
+
+.campo small {
+    visibility: hidden;
+    position: absolute;
+    margin-top: 5px;
+    font-size: 14px;
+
+}
+
+
+.ri-eye-line {
+  position: absolute;
+  top: 41px;
+  right: 10px;
+  cursor: pointer;
+  transform: translateY(-50%);
+  color: #858585;
+}
+
+.ri-eye-off-line{
   position: absolute;
   top: 41px;
   right: 10px;
