--- a/estilo.css
+++ b/estilo.css
@@ -438,6 +438,7 @@ color: #0056b3;
   align-items: center;
   position: relative;
   margin-bottom: 20px;
+  position: relative;
 }
 
 .photo-upload svg {
@@ -445,20 +446,6 @@ color: #0056b3;
   stroke: #555;
   fill: none;
   stroke-width: 1.5;
-}
-
-.btn-add {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  background-color: #ff7f27;
-  color: white;
-  border: none;
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  font-size: 20px;
-  cursor: pointer;
 }
 
 .form-produto {
@@ -621,22 +608,22 @@ main{
     padding: 0 2vw;
 }
 .fotos{
-    width: 260px;
-    height: 250px;
-    border: 0px solid #FFF;
-    box-shadow: 5px 5px 5px rgba(197, 197, 197, 0.4);
-    flex-grow: 1;
-    transition: transform .5s linear;
-    border-radius: 40px;
-    text-decoration: none;
-    color: #000;
-    margin-bottom: 50px;
+  width: 260px;
+  height: 250px;
+  border: 0px solid #FFF;
+  box-shadow: 5px 5px 5px rgba(197, 197, 197, 0.4);
+  flex-grow: 1;
+  transition: transform .5s linear;
+  border-radius: 40px;
+  text-decoration: none;
+  color: #000;
+  margin-bottom: 50px;
 }
 .fotos img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 40px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 40px;
 }
 
 
@@ -939,3 +926,31 @@ border-color: #0056b3;
   background: #FF7F27;
   color: white;
 }
+
+.botao2 {
+    width: 100%;
+    padding: 14px 0;          
+    display: flex;
+    align-items: center;      
+    justify-content: center;  
+
+    background-color: #FF7F27;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+
+    box-sizing: border-box;
+    border-radius: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    border: none;
+}
+.botao2:hover {
+
+background-color: #0056b3;
+}
+.ri-camera-line{
+font-size: 50px;
+color: #0056b3;
+}
+
