--- a/estilo.css
+++ b/estilo.css
@@ -686,6 +686,14 @@ text-decoration: none;
   border-radius: 18px ;
  }
 
+ .logoperfil img{
+  background-color: #FF7F27;
+  height: 200px;
+  width: 100%;
+  margin: 40px auto;
+  max-width: 100%;
+  border-radius: 18px ;
+ }
 
 .perfil-container {
   display: flex;
@@ -705,20 +713,18 @@ text-decoration: none;
 }
 
 
-.fotoperfil {
-  padding: 20px;
-  width: 90px;
-  height: 90px;
-  background-color: #ccc;
-  border-radius: 50%;
-  border: 4px solid white;
+.fotoperfil{
+   width: 140px;
+    height: 140px;
+    background: #dcdcdc;
+    border-radius: 50%;
 }
 
 .fotoperfil img{
-  padding: 20px;
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
+   width: 140px;
+    height: 140px;
+    background: #dcdcdc;
+    border-radius: 50%;
 
 }
 
@@ -1306,9 +1312,6 @@ p{
 }
 
 
-
-
-
 .btn {
   padding: 12px 20px;
   border-radius: 8px;
@@ -1328,4 +1331,10 @@ p{
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+
+.faixafim{
+background-color: #555;
+height: 400px;
+width: 100%;
 }
